docs: add swager for userController.js
